--- a/style.css
+++ b/style.css
@@ -10,4 +10,16 @@ h3{
 }
 body{
     background-color: rgb(155, 167, 176);
+    margin: 50px;
+}
+.center-image{
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    border-radius: 30px;
+}
+.image-container{
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
